# Convertidor

./: README.md  meson.build  tech.digiroad.Convertidor.json  update_l10n.sh
data/: meson.build  tech.digiroad.Convertidor.desktop.in  tech.digiroad.Convertidor.gschema.xml  tech.digiroad.Convertidor.metainfo.xml.in  tech.digiroad.Convertidor.service.in
data/icons/: meson.build
po/: POTFILES.in  convertidor.pot  meson.build  ru.po
src/: convertidor.gresource.xml  convertidor.in  convertidor.py  main.py  meson.build  window.py
src/gtk/: window.ui
